stricter node merge